tests/ui/macros/rfc-3086-metavar-expr/required-feature.stderr
error[E0658]: meta-variable expressions are unstable
  --> $DIR/required-feature.rs:4:16
   |
LL |             ( $$( $$any:tt )* ) => { $$( $$any )* };
   |                ^
   |
   = note: see issue #83527 <https://github.com/rust-lang/rust/issues/83527> for more information
   = help: add `#![feature(macro_metavar_expr)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: meta-variable expressions are unstable
  --> $DIR/required-feature.rs:4:20
   |
LL |             ( $$( $$any:tt )* ) => { $$( $$any )* };
   |                    ^
   |
   = note: see issue #83527 <https://github.com/rust-lang/rust/issues/83527> for more information
   = help: add `#![feature(macro_metavar_expr)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: meta-variable expressions are unstable
  --> $DIR/required-feature.rs:4:39
   |
LL |             ( $$( $$any:tt )* ) => { $$( $$any )* };
   |                                       ^
   |
   = note: see issue #83527 <https://github.com/rust-lang/rust/issues/83527> for more information
   = help: add `#![feature(macro_metavar_expr)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: meta-variable expressions are unstable
  --> $DIR/required-feature.rs:4:43
   |
LL |             ( $$( $$any:tt )* ) => { $$( $$any )* };
   |                                           ^
   |
   = note: see issue #83527 <https://github.com/rust-lang/rust/issues/83527> for more information
   = help: add `#![feature(macro_metavar_expr)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0658`.
