tests/ui/macros/rfc-3086-metavar-expr/required-feature.rs
macro_rules! dollar_dollar {
    () => {
        macro_rules! bar {
            ( $$( $$any:tt )* ) => { $$( $$any )* };
            //~^ ERROR meta-variable expressions are unstable
            //~| ERROR meta-variable expressions are unstable
            //~| ERROR meta-variable expressions are unstable
            //~| ERROR meta-variable expressions are unstable
        }
    };
}

fn main() {
}
